// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Normalization default should match snapshot 1`] = `
<div
  className="form__option-normalization"
>
  <div
    className="form__option-normalization-select"
    style={
      Object {
        "marginRight": 0,
      }
    }
  >
    <CustomField
      helpMessage="No normalization is applied by default but data can be normalized by the total
        abundance between conditions or by a specific readout. If you are applying multiple
        transformations to your data, normalization will always occur after control subtraction
        and readout length normalization but before log transformation."
      label="Condition normalization"
      name="normalization"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "none",
            "value": "none",
          },
          Object {
            "text": "Total abundance",
            "value": "total",
          },
          Object {
            "text": "Specific readout",
            "value": "readout",
          },
        ]
      }
      placeHolder="Condition normalization..."
      type="select"
    />
  </div>
</div>
`;

exports[`Normalization readout normalization should match snapshot 1`] = `
<div
  className="form__option-normalization"
>
  <div
    className="form__option-normalization-select"
    style={
      Object {
        "marginRight": 20,
      }
    }
  >
    <CustomField
      helpMessage={null}
      label="Condition normalization"
      name="normalization"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "none",
            "value": "none",
          },
          Object {
            "text": "Total abundance",
            "value": "total",
          },
          Object {
            "text": "Specific readout",
            "value": "readout",
          },
        ]
      }
      placeHolder="Condition normalization..."
      type="select"
    />
  </div>
  <div
    className="form__option-normalization-input"
  >
    <CustomField
      helpMessage="No normalization is applied by default but data can be normalized by the total
        abundance between conditions or by a specific readout. If you are applying multiple
        transformations to your data, normalization will always occur after control subtraction
        and readout length normalization but before log transformation."
      label="Readout for normalization"
      name="normalizationReadout"
      onChange={[Function]}
      placeHolder="Readout for normalization..."
      type="input"
    />
  </div>
</div>
`;
